Endpoint for analysis using github url
